first_name in FB 2.4

--- a/templates_local/activitytree/welcome.html
+++ b/templates_local/activitytree/welcome.html
@@ -44,7 +44,15 @@ body {
 .media-heading > h5,h4{
     margin-top: 0px;
 
+
 }
+
+        #brand code{
+color: #72DC40;
+            background-color: #333;
+
+}
+
     </style>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -65,7 +73,7 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><code>codigo.uno</code></a>
+          <a class="navbar-brand" id="brand" href="#"><code>codigo.uno</code></a>
         </div>
 
 
